--- a/PreenchimentoPoligonos/pom.xml
+++ b/PreenchimentoPoligonos/pom.xml
@@ -13,7 +13,7 @@
         <exec-version>1.6.0</exec-version>
         <maven-compiler-version>3.6.2</maven-compiler-version>
 
-        <main-class>preenchimentoPoligonos.preenchimentoPoligonos</main-class>
+        <main-class>Projeto.Projeto</main-class>
     </properties>
 
 
