--- a/PreenchimentoPoligonos/pom.xml
+++ b/PreenchimentoPoligonos/pom.xml
@@ -12,6 +12,7 @@
         <lwjgl-version>3.1.2</lwjgl-version>
         <exec-version>1.6.0</exec-version>
         <maven-compiler-version>3.6.2</maven-compiler-version>
+        <nd4j-version>0.9.1</nd4j-version>
 
         <main-class>Projeto.Projeto</main-class>
     </properties>
@@ -70,6 +71,12 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>${exec-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native-platform</artifactId>
+            <version>${nd4j-version}</version>
         </dependency>
     </dependencies>
 
